<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">

        <item
            android:id="@+id/item_1"
            android:title="@string/drawer_header">
            <menu>
                <item
                    android:id="@+id/navigation_item_1"
                    android:icon="@drawable/logo_app"
                    android:title="@string/navigation_item_1" />
                <item
                    android:id="@+id/navigation_item_2"
                    android:icon="@drawable/logo_app"
                    android:title="@string/navigation_item_2" />
                <item
                    android:id="@+id/navigation_item_3"
                    android:icon="@drawable/logo_app"
                    android:title="@string/navigation_item_3" />
                <item
                    android:id="@+id/navigation_item_4"
                    android:icon="@drawable/logo_app"
                    android:title="@string/navigation_item_4" />
                <item
                    android:id="@+id/navigation_item_5"
                    android:icon="@drawable/logo_app"
                    android:title="@string/navigation_item_5" />

            </menu>
        </item>

        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/logo_app"
            android:title="@string/drawer_menu_settings" />
        <item
            android:id="@+id/navigation_item_logout"
            android:icon="@drawable/logo_app"
            android:title="@string/drawer_menu_logout"/>
    </group>
</menu>