<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin_top"
    android:paddingBottom="@dimen/activity_margin"
    android:background="@drawable/default_background" >

        <TextView
            android:id="@+id/recovery_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            style="@style/TextTitle"
            android:text="@string/recovery_title"/>
        <TextView
            android:id="@+id/recovery_sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/recovery_header"
            android:layout_marginBottom="40dp"
            style="@style/TextSubTitle"
            android:text="@string/recovery_sub_title"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/recovery_email_edit_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
                <EditText
                    android:id="@+id/recovery_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recovery_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/recovery_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recovery_email_edit_container"
            android:layout_marginTop="24dp"
            android:text="@string/recovery_continue_button" />

</RelativeLayout>
