<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin_top_nostatusbar"
            android:paddingBottom="@dimen/activity_margin">

                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo_app"
                    android:layout_marginBottom="@dimen/space_8dp"
                    android:contentDescription="@string/empty"/>

                <LinearLayout
                    android:id="@+id/data_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_logo"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true">
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/register_email_edit_inputlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">
                                <EditText
                                    android:id="@+id/register_email_edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/register_email"
                                    android:inputType="textEmailAddress"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/register_name_edit_inputlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">
                                <EditText
                                    android:id="@+id/register_name_edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/register_name"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/register_password_edit_inputlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">
                                <EditText
                                    android:id="@+id/register_password_edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/register_password"
                                    android:maxLength="18"
                                    android:inputType="textPassword"/>
                        </android.support.design.widget.TextInputLayout>


                        <CheckBox
                            android:id="@+id/register_policy_checkbox"
                            android:textColor="@color/b_text"
                            android:text="@string/register_policy"
                            android:layout_marginTop="@dimen/space_8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/DarkStyleView" />
                </LinearLayout>

                <Button
                    android:text="@string/register_register_button"
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_marginRight="@dimen/space_16dp"
                    android:layout_marginLeft="@dimen/space_16dp"
                    android:layout_below="@+id/data_container"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/space_16dp" />
        </RelativeLayout>


</ScrollView>


